cmake_minimum_required(VERSION 3.18)

project(PolySolveOptionalDependencyContract LANGUAGES CXX)

set(POLYSOLVE_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../../.." CACHE PATH "Path to the PolySolve source tree")
get_filename_component(POLYSOLVE_SOURCE_DIR "${POLYSOLVE_SOURCE_DIR}" ABSOLUTE)

set(POLYSOLVE_WITH_TESTS OFF CACHE BOOL "" FORCE)

add_subdirectory("${POLYSOLVE_SOURCE_DIR}" polysolve)

function(polysolve_collect_linear_definitions out_var)
    set(definitions)
    foreach(property IN ITEMS COMPILE_DEFINITIONS INTERFACE_COMPILE_DEFINITIONS)
        get_target_property(values polysolve_linear ${property})
        if(values)
            list(APPEND definitions ${values})
        endif()
    endforeach()
    list(REMOVE_DUPLICATES definitions)
    set(${out_var} ${definitions} PARENT_SCOPE)
endfunction()

function(polysolve_has_linear_definition out_var definition)
    polysolve_collect_linear_definitions(definitions)
    if(definition IN_LIST definitions)
        set(${out_var} ON PARENT_SCOPE)
    else()
        set(${out_var} OFF PARENT_SCOPE)
    endif()
endfunction()

function(polysolve_bool_var out_var name)
    if(DEFINED ${name} AND ${${name}})
        set(${out_var} ON PARENT_SCOPE)
    else()
        set(${out_var} OFF PARENT_SCOPE)
    endif()
endfunction()

function(polysolve_check_expected_target name target)
    set(expect_var "POLYSOLVE_EXPECT_${name}")
    if(DEFINED ${expect_var} AND NOT "${${expect_var}}" STREQUAL "")
        if(${${expect_var}} AND NOT TARGET ${target})
            message(FATAL_ERROR "${name}: expected target '${target}' to exist")
        elseif(NOT ${${expect_var}} AND TARGET ${target})
            message(FATAL_ERROR "${name}: expected target '${target}' to be absent")
        endif()
    endif()
endfunction()

function(polysolve_check_optional_solver name option target definition)
    polysolve_bool_var(option_enabled ${option})
    polysolve_has_linear_definition(definition_enabled ${definition})
    polysolve_check_expected_target(${name} ${target})

    if(option_enabled AND TARGET ${target})
        if(NOT definition_enabled)
            message(FATAL_ERROR "${name}: target '${target}' exists but '${definition}' is missing")
        endif()
        message(STATUS "${name}: enabled via ${target}")
    else()
        if(definition_enabled)
            message(FATAL_ERROR "${name}: '${definition}' is set without an available requested target")
        endif()
        if(option_enabled)
            message(STATUS "${name}: disabled because ${target} is unavailable")
        else()
            message(STATUS "${name}: disabled by option")
        endif()
    endif()
endfunction()

polysolve_check_optional_solver(ACCELERATE POLYSOLVE_WITH_ACCELERATE polysolve::accelerate POLYSOLVE_WITH_ACCELERATE)
polysolve_check_optional_solver(CHOLMOD POLYSOLVE_WITH_CHOLMOD SuiteSparse::CHOLMOD POLYSOLVE_WITH_CHOLMOD)
polysolve_check_optional_solver(UMFPACK POLYSOLVE_WITH_UMFPACK SuiteSparse::UMFPACK POLYSOLVE_WITH_UMFPACK)
polysolve_check_optional_solver(SUPERLU POLYSOLVE_WITH_SUPERLU SuperLU::SuperLU POLYSOLVE_WITH_SUPERLU)
polysolve_check_optional_solver(SPQR POLYSOLVE_WITH_SPQR SuiteSparse::SPQR POLYSOLVE_WITH_SPQR)
polysolve_check_optional_solver(MKL POLYSOLVE_WITH_MKL mkl::mkl POLYSOLVE_WITH_MKL)
polysolve_check_optional_solver(PARDISO POLYSOLVE_WITH_PARDISO Pardiso::Pardiso POLYSOLVE_WITH_PARDISO)
polysolve_check_optional_solver(HYPRE POLYSOLVE_WITH_HYPRE HYPRE::HYPRE POLYSOLVE_WITH_HYPRE)
polysolve_check_optional_solver(AMGCL POLYSOLVE_WITH_AMGCL amgcl::amgcl POLYSOLVE_WITH_AMGCL)
polysolve_check_optional_solver(SPECTRA POLYSOLVE_WITH_SPECTRA Spectra::Spectra POLYSOLVE_WITH_SPECTRA)
polysolve_check_optional_solver(CUSOLVER POLYSOLVE_WITH_CUSOLVER CUDA::cusolver POLYSOLVE_WITH_CUSOLVER)
